# yesod

./: .dockerignore  Dockerfile  Main.hs  client_session_key.aes  my-yesod-spa.cabal  render.yaml
static/css/: app.css
