cabal-version: 2.0
name: my-yesod-spa
version: 1.0.0.0
build-type: Simple

executable my-yesod-spa
    main-is: Main.hs
    build-depends:
        base >= 4.7 && < 5,
        yesod >= 1.6 && < 1.7,
        yesod-static >= 1.6 && < 1.7,
        hamlet >= 1.2 && < 1.3,
        shakespeare >= 2.0 && < 2.1,
        aeson >= 1.4 && < 2.2,
        text >= 1.2 && < 2.1,
        warp >= 3.2 && < 3.4
    default-language: Haskell2010
    ghc-options: -Wall -fwarn-tabs -O2
