cabal-version: 2.4
name: my-yesod-spa
version: 1.0.0.0
build-type: Simple

executable my-yesod-spa
    main-is: Main.hs
    build-depends:
        base,
        yesod,
        yesod-static,
        hamlet,
        shakespeare,
        aeson,
        text,
        warp
    default-language: Haskell2010
    ghc-options: -Wall -O2
